--- a/locales/fr/page-home.json
+++ b/locales/fr/page-home.json
@@ -1,4 +1,8 @@
 {
-    "title": "Accueil",
-    "description": "Bonjour monde"
+    "metas": {
+        "title": "Accueil",
+        "description": "Bonjour monde"
+    },
+    "hello": "Bonjour!"
 }
+
