Fix: missing translations in index page (#7)
* fix: page index missing translations

* fix: page index missing translations

--- a/locales/fr/page-home.json
+++ b/locales/fr/page-home.json
@@ -1,4 +1,7 @@
 {
-    "title": "Accueil",
-    "description": "Bonjour monde"
+    "metas": {
+        "title": "Accueil",
+        "description": "Bonjour monde"
+    },
+    "hello": "Bonjour!"
 }
